Created Routing Service, added Round Robin, Health check and circuit breaker to check endpoint working correctly without any problems added integration tests.

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,2 +1,8 @@
-version = 3.0.0 // Use the appropriate ScalaFmt version that supports Scala 3
-maxColumn = 100
+version = 3.8.1
+align.preset = more
+maxColumn = 80
+assumeStandardLibraryStripMargin = true
+align.stripMargin = false
+runner.dialect = scala3
+indent.defnSite = 2
+optIn.configStyleArguments = false
