--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,11 @@
 routing-service {
   circuit-breaker {
-    maxFailures = 5,
-    callTimeout = 3,// seconds
-    resetTimeout = .5 //minutes
+    maxFailures = 2,
+    callTimeout = 300,// seconds
+    resetTimeout = 1 //minutes
   }
   health-service {
-    interval = 5 // seconds
+    interval = 10 // seconds
   },
   application-instances = [
     "http://localhost:9000",
